create slider gallery js vanilla

--- a/index.html
+++ b/index.html
@@ -16,22 +16,29 @@
   <body>
     <!-- Slider -->
     <section class="diapositivas">
-      <div class="slider">
-        <h1 class="logoSecundario">Lab/Crea</h1>
-      </div>
-      <section class="botonesSlider">
-        <ul class="btnIzqDer">
-          <li><i class="fas fa-angle-left"></i></li>
-          <li><i class="fas fa-angle-right"></i></li>
-        </ul>
-        <ul class="btnImgs">
-          <li><i class="fas fa-circle"></i></li>
-          <li><i class="fas fa-circle"></i></li>
-          <li><i class="fas fa-circle"></i></li>
-        </ul>
-        <ul class="btnAbajo">
-          <li><i class="fas fa-angle-down"></i></li>
-        </ul>
+      <section class="container">
+        <div class="slide">
+          <img src="assets/img/photo5.jpg" alt="" class="last">
+          <img src="assets/img/photo1.jpg" alt="">
+          <img src="assets/img/photo2.jpg" alt="">
+          <img src="assets/img/photo3.jpg" alt="">
+          <img src="assets/img/photo4.jpg" alt="">
+          <img src="assets/img/photo5.jpg" alt="">
+          <img src="assets/img/photo1.jpg" alt="" class="first" >
+        </div>
+        <div class="content">
+          <div class="arrows">
+            <button class="prev fas fa-chevron-left"></button>
+            <button class="next fas fa-chevron-right"></button>
+          </div>
+          <ul class="corners">
+            <li data-index="0" class="option"></li>
+            <li data-index="1" class="option"></li>
+            <li data-index="2" class="option"></li>
+            <li data-index="3" class="option"></li>
+            <li data-index="4" class="option"></li>
+          </ul>
+        </div>
       </section>
     </section>
     <!-- Inicio -->
@@ -53,15 +60,15 @@
       <h2 class="titulo">Portafolio</h2>
       <p>Cuando surgen ideas creativas</p>
       <ul class="galeria">
-        <li><img src="assets/img/img1.jpg" alt="Foto" /></li>
-        <li><img src="assets/img/img1.jpg" alt="Foto" /></li>
-        <li><img src="assets/img/img1.jpg" alt="Foto" /></li>
-        <li><img src="assets/img/img1.jpg" alt="Foto" /></li>
-        <li><img src="assets/img/img1.jpg" alt="Foto" /></li>
-        <li><img src="assets/img/img1.jpg" alt="Foto" /></li>
-        <li><img src="assets/img/img1.jpg" alt="Foto" /></li>
-        <li><img src="assets/img/img1.jpg" alt="Foto" /></li>
-        <li><img src="assets/img/img1.jpg" alt="Foto" /></li>  
+        <li><img src="assets/img/photo1.jpg" alt="Foto" /></li>
+        <li><img src="assets/img/photo2.jpg" alt="Foto" /></li>
+        <li><img src="assets/img/photo3.jpg" alt="Foto" /></li>
+        <li><img src="assets/img/photo4.jpg" alt="Foto" /></li>
+        <li><img src="assets/img/photo5.jpg" alt="Foto" /></li>
+        <li><img src="assets/img/photo1.jpg" alt="Foto" /></li>
+        <li><img src="assets/img/photo2.jpg" alt="Foto" /></li>
+        <li><img src="assets/img/photo3.jpg" alt="Foto" /></li>
+        <li><img src="assets/img/photo4.jpg" alt="Foto" /></li>  
       </ul>
     </section>
     <section class="nosotros">
