create sub_files sass
Divide file estilos.sass in components

--- a/index.html
+++ b/index.html
@@ -171,9 +171,9 @@
         </section>
       </section>
       <section class="contenidoPie">
-        <p>® 2019 © <span>LAB/CREA</span> Todos los derechos reservados.</p>
+        <p>® 2020 © <span>LAB/CREA</span> Todos los derechos reservados.</p>
       </section>
     </footer>
-    <script src="js/app.js"></script>
+    <script src="js/app.min.js"></script>
   </body>
 </html>
