--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
-    <title>Lab/Crea 2019</title>
+    <title>Lab/Crea 2020</title>
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.10.2/css/all.css"
@@ -18,13 +18,13 @@
     <section class="diapositivas">
       <section class="container">
         <div class="slide">
-          <img src="assets/img/photo5.jpg" alt="" class="last">
-          <img src="assets/img/photo1.jpg" alt="">
-          <img src="assets/img/photo2.jpg" alt="">
-          <img src="assets/img/photo3.jpg" alt="">
-          <img src="assets/img/photo4.jpg" alt="">
-          <img src="assets/img/photo5.jpg" alt="">
-          <img src="assets/img/photo1.jpg" alt="" class="first" >
+          <img class="last" src="assets/img/photo5.jpg" alt="" />
+          <img src="assets/img/photo1.jpg" alt="" />
+          <img src="assets/img/photo2.jpg" alt="" />
+          <img src="assets/img/photo3.jpg" alt="" />
+          <img src="assets/img/photo4.jpg" alt="" />
+          <img src="assets/img/photo5.jpg" alt="" />
+          <img class="first" src="assets/img/photo1.jpg" alt="" />
         </div>
         <div class="content">
           <div class="arrows">
@@ -68,7 +68,7 @@
         <li><img src="assets/img/photo1.jpg" alt="Foto" /></li>
         <li><img src="assets/img/photo2.jpg" alt="Foto" /></li>
         <li><img src="assets/img/photo3.jpg" alt="Foto" /></li>
-        <li><img src="assets/img/photo4.jpg" alt="Foto" /></li>  
+        <li><img src="assets/img/photo4.jpg" alt="Foto" /></li>
       </ul>
     </section>
     <section class="nosotros">
