bug fixed: image home

--- a/index.html
+++ b/index.html
@@ -31,19 +31,29 @@
           <div class="swiper-wrapper">
             <!-- Slides -->
             <div class="swiper-slide">
-              <img src="assets/img/photo1.jpg" alt="Foto" />
+              <picture>
+                <img src="assets/img/photo1.jpg" alt="Foto" />
+              </picture>
             </div>
             <div class="swiper-slide">
-              <img src="assets/img/photo2.jpg" alt="Foto" />
+              <picture>
+                <img src="assets/img/photo2.jpg" alt="Foto" />
+              </picture>
             </div>
             <div class="swiper-slide">
-              <img src="assets/img/photo3.jpg" alt="Foto" />
+              <picture>
+                <img src="assets/img/photo3.jpg" alt="Foto" />
+              </picture>
             </div>
             <div class="swiper-slide">
-              <img src="assets/img/photo4.jpg" alt="Foto" />
+              <picture>
+                <img src="assets/img/photo4.jpg" alt="Foto" />
+              </picture>
             </div>
             <div class="swiper-slide">
-              <img src="assets/img/photo5.jpg" alt="Foto" />
+              <picture>
+                <img src="assets/img/photo5.jpg" alt="Foto" />
+              </picture>
             </div>
           </div>
           <section class="elements">
@@ -76,15 +86,51 @@
       <h2 class="titulo">Portafolio</h2>
       <p>Cuando surgen ideas creativas</p>
       <ul class="galeria">
-        <li><img src="assets/img/photo1.jpg" alt="Foto" /></li>
-        <li><img src="assets/img/photo2.jpg" alt="Foto" /></li>
-        <li><img src="assets/img/photo3.jpg" alt="Foto" /></li>
-        <li><img src="assets/img/photo4.jpg" alt="Foto" /></li>
-        <li><img src="assets/img/photo5.jpg" alt="Foto" /></li>
-        <li><img src="assets/img/photo1.jpg" alt="Foto" /></li>
-        <li><img src="assets/img/photo2.jpg" alt="Foto" /></li>
-        <li><img src="assets/img/photo3.jpg" alt="Foto" /></li>
-        <li><img src="assets/img/photo4.jpg" alt="Foto" /></li>
+        <li>
+          <picture>
+            <img src="assets/img/photo1.jpg" alt="Foto" />
+          </picture>
+        </li>
+        <li>
+          <picture>
+            <img src="assets/img/photo2.jpg" alt="Foto" />
+          </picture>
+        </li>
+        <li>
+          <picture>
+            <img src="assets/img/photo3.jpg" alt="Foto" />
+          </picture>
+        </li>
+        <li>
+          <picture>
+            <img src="assets/img/photo4.jpg" alt="Foto" />
+          </picture>
+        </li>
+        <li>
+          <picture>
+            <img src="assets/img/photo5.jpg" alt="Foto" />
+          </picture>
+        </li>
+        <li>
+          <picture>
+            <img src="assets/img/photo1.jpg" alt="Foto" />
+          </picture>
+        </li>
+        <li>
+          <picture>
+            <img src="assets/img/photo2.jpg" alt="Foto" />
+          </picture>
+        </li>
+        <li>
+          <picture>
+            <img src="assets/img/photo3.jpg" alt="Foto" />
+          </picture>
+        </li>
+        <li>
+          <picture>
+            <img src="assets/img/photo4.jpg" alt="Foto" />
+          </picture>
+        </li>
       </ul>
     </section>
     <section id="nosotros">
@@ -95,7 +141,11 @@
       </p>
       <ul class="equipo">
         <li>
-          <div><img src="assets/img/equipo/foto1.png" alt="Persona 1" /></div>
+          <div>
+            <picture>
+              <img src="assets/img/equipo/foto1.png" alt="Persona 1" />
+            </picture>
+          </div>
           <h3>Nombre y Apellido</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus
@@ -113,7 +163,11 @@
           </a>
         </li>
         <li>
-          <div><img src="assets/img/equipo/foto1.png" alt="Persona 2" /></div>
+          <div>
+            <picture>
+              <img src="assets/img/equipo/foto1.png" alt="Persona 2" />
+            </picture>
+          </div>
           <h3>Nombre y Apellido</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus
@@ -131,7 +185,11 @@
           </a>
         </li>
         <li>
-          <div><img src="assets/img/equipo/foto1.png" alt="Persona 3" /></div>
+          <div>
+            <picture>
+              <img src="assets/img/equipo/foto1.png" alt="Persona 3" />
+            </picture>
+          </div>
           <h3>Nombre y Apellido</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus
@@ -187,7 +245,7 @@
         </section>
       </section>
       <section class="contenidoPie">
-        <p>® 2020 © <span>LAB/CREA</span> Todos los derechos reservados.</p>
+        <p>® 2021 © <span>LAB/CREA</span> Todos los derechos reservados.</p>
       </section>
     </footer>
   </body>
